regerei com tabs certas

--- a/apendice2.tex
+++ b/apendice2.tex
@@ -10,6 +10,11 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 \input classifsTab
 
 \section{Acurácia das estratégias}
+
+\ano{problema: os valores maximos e minimos estao por tabela e nao por trio de tabelas!!}
+
+\esb{Rnd não vence isoladamente em nenhuma das bases com os classificadores selecionados.}
+% só pra base 45 com ielm
 \subsection{SVM}
 \afterpage{\clearpage\begin{landscape}
 \input stratsALCKappaSVM
@@ -72,7 +77,3 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 \afterpage{\clearpage\begin{landscape}
 \input stratsBalAccVFDT
 \end{landscape}\clearpage}
-
-% \input stratsALCKappaFriedSVM
-% 
-% \input stratsBalAccFriedSVM
