--- a/classifsTab.tex
+++ b/classifsTab.tex
@@ -60,7 +60,7 @@
 51-qsar biodegradatio... & \textcolor{black}{\textbf{  0.83}} &   0.81 &   0.80 & \textcolor{red}{\textbf{  0.76}} & \textcolor{red}{\textbf{  0.76}} &   0.82 &   0.78 & \underline{\textcolor{blue}{\textbf{  0.84}}} \\
 52-ringnorm &   0.74 &   0.90 &   0.76 &   0.74 & \textcolor{black}{\textbf{  0.96}} &   0.50 & \underline{\textcolor{blue}{\textbf{  0.97}}} & \textcolor{red}{\textbf{ -2.00}} \\
 53-robot failure lp1 &   0.82 &   0.67 &   0.39 &   0.40 & \textcolor{black}{\textbf{  0.86}} & \textcolor{red}{\textbf{  0.25}} & \underline{\textcolor{blue}{\textbf{  0.92}}} &   0.42 \\
-54-robot failure lp4 &   0.81 &   0.77 &   0.47 &   0.46 & \textcolor{black}{\textbf{  0.89}} &   0.33 & \underline{\textcolor{blue}{\textbf{  0.91}}} & \textcolor{red}{\textbf{ -1.90}} \\ \hline
+54-robot failure lp4 &   0.81 &   0.77 &   0.47 &   0.46 & \textcolor{black}{\textbf{  0.89}} & \textcolor{red}{\textbf{  0.33}} & \underline{\textcolor{blue}{\textbf{  0.91}}} &   0.42 \\ \hline
 55-robot failure lp5 &   0.60 &   0.61 &   0.30 &   0.33 & \textcolor{black}{\textbf{  0.62}} &   0.20 & \underline{\textcolor{blue}{\textbf{  0.65}}} & \textcolor{red}{\textbf{ -2.00}} \\
 56-robot nav sensor r... & \textcolor{black}{\textbf{  0.98}} & \underline{\textcolor{blue}{\textbf{  1.00}}} &   0.50 &   0.59 &   0.82 &   0.96 & \textcolor{black}{\textbf{  0.98}} & \textcolor{red}{\textbf{ -2.00}} \\
 57-saheart &   0.60 &   0.61 &   0.65 &   0.62 & \textcolor{black}{\textbf{  0.67}} & \textcolor{red}{\textbf{  0.50}} & \underline{\textcolor{blue}{\textbf{  0.68}}} &   0.66 \\
@@ -90,7 +90,7 @@
 76-thyroid sick euthy... & \textcolor{black}{\textbf{  0.77}} & \underline{\textcolor{blue}{\textbf{  0.93}}} &   0.56 &   0.58 &   0.69 &   0.52 &   0.66 & \textcolor{red}{\textbf{ -2.00}} \\
 77-tic tac toe & \underline{\textcolor{blue}{\textbf{  0.98}}} &   0.81 &   0.67 &   0.71 &   0.63 & \textcolor{black}{\textbf{  0.87}} &   0.63 & \textcolor{red}{\textbf{ -2.00}} \\
 78-turkiye student &   0.28 & \textcolor{black}{\textbf{  0.31}} &   0.24 &   0.25 &   0.29 & \underline{\textcolor{blue}{\textbf{  0.34}}} &   0.25 & \textcolor{red}{\textbf{ -2.00}} \\
-79-twonorm &   0.95 &   0.85 & \textcolor{blue}{\textbf{  0.98}} &   0.94 &   0.97 & \textcolor{blue}{\textbf{  0.98}} &   0.97 & \textcolor{red}{\textbf{ -1.88}} \\
+79-twonorm &   0.95 &   0.85 & \textcolor{blue}{\textbf{  0.98}} &   0.94 &   0.97 & \textcolor{blue}{\textbf{  0.98}} &   0.97 & \textcolor{red}{\textbf{ -1.64}} \\
 80-user knowledge &   0.67 & \textcolor{black}{\textbf{  0.77}} &   0.47 & \textcolor{red}{\textbf{  0.45}} &   0.65 & \underline{\textcolor{blue}{\textbf{  0.83}}} &   0.76 &   0.63 \\ \hline
 81-vertebra column 2c &   0.79 &   0.75 &   0.78 &   0.74 & \textcolor{black}{\textbf{  0.80}} &   0.50 & \underline{\textcolor{blue}{\textbf{  0.81}}} & \textcolor{red}{\textbf{  0.49}} \\
 82-vertebra column 3c &   0.73 &   0.76 &   0.75 &   0.72 & \textcolor{black}{\textbf{  0.77}} &   0.33 & \underline{\textcolor{blue}{\textbf{  0.79}}} & \textcolor{red}{\textbf{ -2.00}} \\
