--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -14,6 +14,9 @@ Na árvore exibida na Figura \ref{tree},
 a estratégia de aprendizado ativo.
 Apesar de ilustrativa, a árvore pode não ser segura do ponto de vista de tomada de
 decisão devido ao baixo grau de pureza das folhas.
+
+\input arvore
+
 Entretanto, algumas ramificações aceitam explicações plausíveis:
 \begin{itemize}
  \item É fato que o algoritmo NB produz estimativas de distribuição de probabilidade
@@ -41,7 +44,9 @@ usa apenas QBC, entropia e random.
 Isso sugere a viabilidade do aprendizado ativo em geral.
 \end{itemize}
 
-\input arvore
+% \input stratsALCKappaFriedSVM
+% %
+% \input stratsBalAccFriedSVM
 
 \ano{seria ideal fazer uma segunda árvore em que apenas o melhor classificador
 é usado em cada base}
