--- a/passiveDists.tex
+++ b/passiveDists.tex
@@ -1,5 +1,5 @@
 \begin{table}[h]
-\caption{Similaridade entre algoritmos de aprendizado de acordo com a acurácia balanceada para as 94 bases de dados. O maior e menor valor de cada linha está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente.}
+\caption{Similaridade entre algoritmos de aprendizado de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,5$ estão em negrito.}
 \begin{center}\begin{tabular}{lcc|cc|cc|c}
  				& 5NN & C4.5 & CIELM & IELM & NB & SVM & VFDT \\5NN	& - & \textcolor{blue}{\textbf{  0.52}} &   0.38 &   0.40 &   0.46 & \textcolor{red}{\textbf{  0.28}} &   0.44 \\
 C4.5	& \textcolor{blue}{\textbf{  0.52}} & - &   0.38 &   0.40 &   0.46 & \textcolor{red}{\textbf{  0.28}} &   0.43 \\ \hline
