--- a/stratDists.tex
+++ b/stratDists.tex
@@ -1,26 +1,26 @@
 \begin{table}[h]
 \caption{Similaridade entre estratégias de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,5$ estão em negrito.}
 \begin{center}\scalebox{0.8}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc|cc|cc|c}
- 				& \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}Unc\end{sideways} & \begin{sideways}Ent\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}EERent\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}SGmulti\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUeuc\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}ATUeuc\end{sideways} & \begin{sideways}ATUman\end{sideways} & \begin{sideways}ATUmah\end{sideways} & \begin{sideways}LUeuc\end{sideways} & \begin{sideways}LUman\end{sideways} & \begin{sideways}LUmah\end{sideways} & \begin{sideways}ALUeuc\end{sideways} & \begin{sideways}ALUman\end{sideways} & \begin{sideways}ALUmah\end{sideways} \\Rnd	& - & \textcolor{blue}{\textbf{  0.66}} &   0.37 &   0.36 &   0.37 &   0.45 &   0.48 & \textbf{  0.57} &   0.25 &   0.37 &   0.37 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.53} & \textbf{  0.52} &   0.21 &   0.38 &   0.37 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.55} & \textbf{  0.53} &   0.21 \\
-Clu	& \textcolor{blue}{\textbf{  0.66}} & - &   0.37 &   0.35 &   0.37 &   0.47 & \textbf{  0.50} & \textbf{  0.55} &   0.24 &   0.38 &   0.38 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.55} & \textbf{  0.55} &   0.21 &   0.39 &   0.38 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.58} & \textbf{  0.56} &   0.21 \\ \hline
-Unc	&   0.37 &   0.37 & - & \textcolor{blue}{\textbf{  0.58}} & \textcolor{blue}{\textbf{  0.58}} &   0.39 &   0.39 &   0.38 &   0.27 &   0.47 &   0.46 & \textcolor{red}{\textbf{  0.20}} &   0.35 &   0.35 & \textcolor{red}{\textbf{  0.20}} &   0.47 &   0.46 & \textcolor{red}{\textbf{  0.20}} &   0.35 &   0.35 & \textcolor{red}{\textbf{  0.20}} \\
-Ent	&   0.36 &   0.35 & \textcolor{blue}{\textbf{  0.58}} & - &   0.43 &   0.36 &   0.36 &   0.37 &   0.27 &   0.39 &   0.39 &   0.20 &   0.34 &   0.33 &   0.20 &   0.39 &   0.39 &   0.20 &   0.33 &   0.33 & \textcolor{red}{\textbf{  0.19}} \\ \hline
-Mar	&   0.37 &   0.37 & \textcolor{blue}{\textbf{  0.58}} &   0.43 & - &   0.39 &   0.41 &   0.38 &   0.26 & \textbf{  0.54} & \textbf{  0.53} &   0.21 &   0.36 &   0.35 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.55} & \textbf{  0.52} &   0.21 &   0.35 &   0.35 & \textcolor{red}{\textbf{  0.20}} \\
-EERent	&   0.45 & \textcolor{blue}{\textbf{  0.47}} &   0.39 &   0.36 &   0.39 & - &   0.45 &   0.43 &   0.24 &   0.39 &   0.39 & \textcolor{red}{\textbf{  0.20}} &   0.41 &   0.40 &   0.21 &   0.40 &   0.39 & \textcolor{red}{\textbf{  0.20}} &   0.42 &   0.41 &   0.21 \\ \hline
-EERacu	&   0.48 & \textcolor{blue}{\textbf{  0.50}} &   0.39 &   0.36 &   0.41 &   0.45 & - &   0.45 &   0.24 &   0.40 &   0.40 & \textcolor{red}{\textbf{  0.20}} &   0.44 &   0.43 &   0.21 &   0.41 &   0.40 & \textcolor{red}{\textbf{  0.20}} &   0.44 &   0.44 &   0.21 \\
-SGmulti	& \textcolor{blue}{\textbf{  0.57}} & \textbf{  0.55} &   0.38 &   0.37 &   0.38 &   0.43 &   0.45 & - &   0.25 &   0.38 &   0.38 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.50} &   0.49 &   0.21 &   0.39 &   0.38 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.50} &   0.49 &   0.21 \\ \hline
-DWeuc	&   0.25 &   0.24 & \textcolor{blue}{\textbf{  0.27}} & \textcolor{blue}{\textbf{  0.27}} &   0.26 &   0.24 &   0.24 &   0.25 & - &   0.25 &   0.25 & \textcolor{red}{\textbf{  0.17}} &   0.23 &   0.23 & \textcolor{red}{\textbf{  0.17}} &   0.25 &   0.24 & \textcolor{red}{\textbf{  0.17}} &   0.23 &   0.23 & \textcolor{red}{\textbf{  0.17}} \\
-TUeuc	&   0.37 &   0.38 &   0.47 &   0.39 & \textbf{  0.54} &   0.39 &   0.40 &   0.38 &   0.25 & - & \textbf{  0.69} &   0.21 &   0.38 &   0.38 & \textcolor{red}{\textbf{  0.20}} & \textcolor{blue}{\textbf{  0.73}} & \textbf{  0.66} &   0.21 &   0.37 &   0.38 & \textcolor{red}{\textbf{  0.20}} \\ \hline
-TUman	&   0.37 &   0.38 &   0.46 &   0.39 & \textbf{  0.53} &   0.39 &   0.40 &   0.38 &   0.25 & \textbf{  0.69} & - &   0.21 &   0.39 &   0.39 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.71} & \textcolor{blue}{\textbf{  0.74}} &   0.21 &   0.38 &   0.39 & \textcolor{red}{\textbf{  0.20}} \\
-TUmah	&   0.20 &   0.20 &   0.20 &   0.20 &   0.21 &   0.20 &   0.20 &   0.20 & \textcolor{red}{\textbf{  0.17}} &   0.21 &   0.21 & - &   0.20 &   0.20 &   0.37 &   0.21 &   0.21 & \textcolor{blue}{\textbf{  0.70}} &   0.20 &   0.20 &   0.36 \\ \hline
-ATUeuc	& \textbf{  0.53} & \textbf{  0.55} &   0.35 &   0.34 &   0.36 &   0.41 &   0.44 & \textbf{  0.50} &   0.23 &   0.38 &   0.39 & \textcolor{red}{\textbf{  0.20}} & - & \textcolor{blue}{\textbf{  0.71}} &   0.21 &   0.39 &   0.39 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.70} & \textbf{  0.69} &   0.21 \\
-ATUman	& \textbf{  0.52} & \textbf{  0.55} &   0.35 &   0.33 &   0.35 &   0.40 &   0.43 &   0.49 &   0.23 &   0.38 &   0.39 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.71} & - &   0.21 &   0.39 &   0.39 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.68} & \textcolor{blue}{\textbf{  0.74}} &   0.21 \\ \hline
-ATUmah	&   0.21 &   0.21 &   0.20 &   0.20 &   0.20 &   0.21 &   0.21 &   0.21 & \textcolor{red}{\textbf{  0.17}} &   0.20 &   0.20 &   0.37 &   0.21 &   0.21 & - &   0.20 &   0.20 &   0.37 &   0.21 &   0.21 & \textcolor{blue}{\textbf{  0.68}} \\
-LUeuc	&   0.38 &   0.39 &   0.47 &   0.39 & \textbf{  0.55} &   0.40 &   0.41 &   0.39 &   0.25 & \textcolor{blue}{\textbf{  0.73}} & \textbf{  0.71} &   0.21 &   0.39 &   0.39 & \textcolor{red}{\textbf{  0.20}} & - & \textbf{  0.68} &   0.21 &   0.39 &   0.39 & \textcolor{red}{\textbf{  0.20}} \\ \hline
-LUman	&   0.37 &   0.38 &   0.46 &   0.39 & \textbf{  0.52} &   0.39 &   0.40 &   0.38 &   0.24 & \textbf{  0.66} & \textcolor{blue}{\textbf{  0.74}} &   0.21 &   0.39 &   0.39 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.68} & - &   0.21 &   0.38 &   0.39 & \textcolor{red}{\textbf{  0.20}} \\
-LUmah	&   0.20 &   0.20 &   0.20 &   0.20 &   0.21 &   0.20 &   0.20 &   0.20 & \textcolor{red}{\textbf{  0.17}} &   0.21 &   0.21 & \textcolor{blue}{\textbf{  0.70}} &   0.20 &   0.20 &   0.37 &   0.21 &   0.21 & - &   0.20 &   0.20 &   0.37 \\ \hline
-ALUeuc	& \textbf{  0.55} & \textbf{  0.58} &   0.35 &   0.33 &   0.35 &   0.42 &   0.44 & \textbf{  0.50} &   0.23 &   0.37 &   0.38 & \textcolor{red}{\textbf{  0.20}} & \textcolor{blue}{\textbf{  0.70}} & \textbf{  0.68} &   0.21 &   0.39 &   0.38 & \textcolor{red}{\textbf{  0.20}} & - & \textbf{  0.69} &   0.21 \\
-ALUman	& \textbf{  0.53} & \textbf{  0.56} &   0.35 &   0.33 &   0.35 &   0.41 &   0.44 &   0.49 &   0.23 &   0.38 &   0.39 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.69} & \textcolor{blue}{\textbf{  0.74}} &   0.21 &   0.39 &   0.39 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.69} & - &   0.21 \\ \hline
-ALUmah	&   0.21 &   0.21 &   0.20 &   0.19 &   0.20 &   0.21 &   0.21 &   0.21 & \textcolor{red}{\textbf{  0.17}} &   0.20 &   0.20 &   0.36 &   0.21 &   0.21 & \textcolor{blue}{\textbf{  0.68}} &   0.20 &   0.20 &   0.37 &   0.21 &   0.21 & - \\\end{tabular}}\label{stratDists}
+ 				& \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}Unc\end{sideways} & \begin{sideways}Ent\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}EERent\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}SGmulti\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUeuc\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}ATUeuc\end{sideways} & \begin{sideways}ATUman\end{sideways} & \begin{sideways}ATUmah\end{sideways} & \begin{sideways}LUeuc\end{sideways} & \begin{sideways}LUman\end{sideways} & \begin{sideways}LUmah\end{sideways} & \begin{sideways}ALUeuc\end{sideways} & \begin{sideways}ALUman\end{sideways} & \begin{sideways}ALUmah\end{sideways} \\Rnd	& - & \textcolor{blue}{\textbf{  0.67}} &   0.38 &   0.38 &   0.39 &   0.47 & \textbf{  0.50} & \textbf{  0.58} &   0.25 &   0.39 &   0.39 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.55} & \textbf{  0.54} &   0.21 &   0.40 &   0.39 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.57} & \textbf{  0.54} &   0.21 \\
+Clu	& \textcolor{blue}{\textbf{  0.67}} & - &   0.38 &   0.37 &   0.38 &   0.48 & \textbf{  0.51} & \textbf{  0.56} &   0.25 &   0.40 &   0.40 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.57} & \textbf{  0.57} &   0.21 &   0.41 &   0.40 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.60} & \textbf{  0.58} &   0.21 \\ \hline
+Unc	&   0.38 &   0.38 & - & \textcolor{blue}{\textbf{  0.65}} & \textbf{  0.62} &   0.40 &   0.40 &   0.40 &   0.28 &   0.49 &   0.48 &   0.21 &   0.36 &   0.35 & \textcolor{red}{\textbf{  0.20}} &   0.49 &   0.48 & \textcolor{red}{\textbf{  0.20}} &   0.36 &   0.35 & \textcolor{red}{\textbf{  0.20}} \\
+Ent	&   0.38 &   0.37 & \textcolor{blue}{\textbf{  0.65}} & - & \textbf{  0.50} &   0.39 &   0.38 &   0.39 &   0.28 &   0.43 &   0.43 & \textcolor{red}{\textbf{  0.20}} &   0.35 &   0.35 & \textcolor{red}{\textbf{  0.20}} &   0.44 &   0.43 & \textcolor{red}{\textbf{  0.20}} &   0.35 &   0.35 & \textcolor{red}{\textbf{  0.20}} \\ \hline
+Mar	&   0.39 &   0.38 & \textcolor{blue}{\textbf{  0.62}} & \textbf{  0.50} & - &   0.41 &   0.42 &   0.40 &   0.27 & \textbf{  0.56} & \textbf{  0.54} &   0.21 &   0.37 &   0.36 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.56} & \textbf{  0.53} &   0.21 &   0.37 &   0.36 & \textcolor{red}{\textbf{  0.20}} \\
+EERent	&   0.47 & \textcolor{blue}{\textbf{  0.48}} &   0.40 &   0.39 &   0.41 & - &   0.46 &   0.44 &   0.25 &   0.41 &   0.41 & \textcolor{red}{\textbf{  0.21}} &   0.42 &   0.41 & \textcolor{red}{\textbf{  0.21}} &   0.42 &   0.41 & \textcolor{red}{\textbf{  0.21}} &   0.43 &   0.42 & \textcolor{red}{\textbf{  0.21}} \\ \hline
+EERacu	& \textbf{  0.50} & \textcolor{blue}{\textbf{  0.51}} &   0.40 &   0.38 &   0.42 &   0.46 & - &   0.47 &   0.25 &   0.41 &   0.41 & \textcolor{red}{\textbf{  0.21}} &   0.45 &   0.44 & \textcolor{red}{\textbf{  0.21}} &   0.42 &   0.41 & \textcolor{red}{\textbf{  0.21}} &   0.45 &   0.45 & \textcolor{red}{\textbf{  0.21}} \\
+SGmulti	& \textcolor{blue}{\textbf{  0.58}} & \textbf{  0.56} &   0.40 &   0.39 &   0.40 &   0.44 &   0.47 & - &   0.25 &   0.41 &   0.41 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.51} & \textbf{  0.51} &   0.21 &   0.42 &   0.41 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.52} & \textbf{  0.51} &   0.21 \\ \hline
+DWeuc	&   0.25 &   0.25 & \textcolor{blue}{\textbf{  0.28}} & \textcolor{blue}{\textbf{  0.28}} &   0.27 &   0.25 &   0.25 &   0.25 & - &   0.26 &   0.26 &   0.18 &   0.24 &   0.23 & \textcolor{red}{\textbf{  0.17}} &   0.26 &   0.25 &   0.18 &   0.24 &   0.23 & \textcolor{red}{\textbf{  0.17}} \\
+TUeuc	&   0.39 &   0.40 &   0.49 &   0.43 & \textbf{  0.56} &   0.41 &   0.41 &   0.41 &   0.26 & - & \textbf{  0.71} &   0.21 &   0.40 &   0.39 & \textcolor{red}{\textbf{  0.20}} & \textcolor{blue}{\textbf{  0.75}} & \textbf{  0.67} &   0.21 &   0.39 &   0.39 & \textcolor{red}{\textbf{  0.20}} \\ \hline
+TUman	&   0.39 &   0.40 &   0.48 &   0.43 & \textbf{  0.54} &   0.41 &   0.41 &   0.41 &   0.26 & \textbf{  0.71} & - &   0.21 &   0.40 &   0.40 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.72} & \textcolor{blue}{\textbf{  0.78}} &   0.21 &   0.40 &   0.40 & \textcolor{red}{\textbf{  0.20}} \\
+TUmah	&   0.20 &   0.20 &   0.21 &   0.20 &   0.21 &   0.21 &   0.21 &   0.20 & \textcolor{red}{\textbf{  0.18}} &   0.21 &   0.21 & - &   0.20 &   0.20 &   0.38 &   0.21 &   0.21 & \textcolor{blue}{\textbf{  0.71}} &   0.20 &   0.20 &   0.37 \\ \hline
+ATUeuc	& \textbf{  0.55} & \textbf{  0.57} &   0.36 &   0.35 &   0.37 &   0.42 &   0.45 & \textbf{  0.51} &   0.24 &   0.40 &   0.40 & \textcolor{red}{\textbf{  0.20}} & - & \textcolor{blue}{\textbf{  0.74}} &   0.21 &   0.41 &   0.40 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.72} & \textbf{  0.72} &   0.21 \\
+ATUman	& \textbf{  0.54} & \textbf{  0.57} &   0.35 &   0.35 &   0.36 &   0.41 &   0.44 & \textbf{  0.51} &   0.23 &   0.39 &   0.40 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.74} & - &   0.21 &   0.41 &   0.40 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.70} & \textcolor{blue}{\textbf{  0.77}} &   0.21 \\ \hline
+ATUmah	&   0.21 &   0.21 &   0.20 &   0.20 &   0.20 &   0.21 &   0.21 &   0.21 & \textcolor{red}{\textbf{  0.17}} &   0.20 &   0.20 &   0.38 &   0.21 &   0.21 & - &   0.20 &   0.20 &   0.38 &   0.21 &   0.21 & \textcolor{blue}{\textbf{  0.69}} \\
+LUeuc	&   0.40 &   0.41 &   0.49 &   0.44 & \textbf{  0.56} &   0.42 &   0.42 &   0.42 &   0.26 & \textcolor{blue}{\textbf{  0.75}} & \textbf{  0.72} &   0.21 &   0.41 &   0.41 & \textcolor{red}{\textbf{  0.20}} & - & \textbf{  0.70} &   0.21 &   0.41 &   0.41 & \textcolor{red}{\textbf{  0.20}} \\ \hline
+LUman	&   0.39 &   0.40 &   0.48 &   0.43 & \textbf{  0.53} &   0.41 &   0.41 &   0.41 &   0.25 & \textbf{  0.67} & \textcolor{blue}{\textbf{  0.78}} &   0.21 &   0.40 &   0.40 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.70} & - &   0.21 &   0.40 &   0.40 & \textcolor{red}{\textbf{  0.20}} \\
+LUmah	&   0.20 &   0.20 &   0.20 &   0.20 &   0.21 &   0.21 &   0.21 &   0.20 & \textcolor{red}{\textbf{  0.18}} &   0.21 &   0.21 & \textcolor{blue}{\textbf{  0.71}} &   0.20 &   0.20 &   0.38 &   0.21 &   0.21 & - &   0.20 &   0.20 &   0.38 \\ \hline
+ALUeuc	& \textbf{  0.57} & \textbf{  0.60} &   0.36 &   0.35 &   0.37 &   0.43 &   0.45 & \textbf{  0.52} &   0.24 &   0.39 &   0.40 & \textcolor{red}{\textbf{  0.20}} & \textcolor{blue}{\textbf{  0.72}} & \textbf{  0.70} &   0.21 &   0.41 &   0.40 & \textcolor{red}{\textbf{  0.20}} & - & \textbf{  0.71} &   0.21 \\
+ALUman	& \textbf{  0.54} & \textbf{  0.58} &   0.35 &   0.35 &   0.36 &   0.42 &   0.45 & \textbf{  0.51} &   0.23 &   0.39 &   0.40 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.72} & \textcolor{blue}{\textbf{  0.77}} &   0.21 &   0.41 &   0.40 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.71} & - &   0.21 \\ \hline
+ALUmah	&   0.21 &   0.21 &   0.20 &   0.20 &   0.20 &   0.21 &   0.21 &   0.21 & \textcolor{red}{\textbf{  0.17}} &   0.20 &   0.20 &   0.37 &   0.21 &   0.21 & \textcolor{blue}{\textbf{  0.69}} &   0.20 &   0.20 &   0.38 &   0.21 &   0.21 & - \\\end{tabular}}\label{stratDists}
 \end{center}
 \end{table}
