--- a/stratsALCKappaFriedSVM.tex
+++ b/stratsALCKappaFriedSVM.tex
@@ -1,19 +1,24 @@
 \begin{table}[h]
-\caption{Um contra um: cada asterisco/cruz/ponto indica quando o algoritmo na linha tem melhor ALCKappa para SVM que o algoritmo na coluna com intervalo de confiança de 0.99/0.95/0.90.}
+\caption{Um contra um: cada asterisco/cruz/ponto indica
+quando o algoritmo na linha tem melhor ALCKappa para SVM
+que o algoritmo na coluna com intervalo de confiança de 0.99/0.95/0.90.}
 \begin{center}
-\begin{tabular}{lcc|cc|cc|cc|cc|c}
- 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11\\
-1 - Rnd  	& - &   &   &   &   &   &   &   &   &   &   \\
-2 - Clu  	&   & - &   &   &   &   &   &   &   &   &   \\ \hline
-3 - Mar  	&   &   & - &   &   &   &   &   &   &   &   \\
-4 - EERent	& * & * &   & - &   & * & + &   &   & * &   \\ \hline
-5 - EERacu	&   &   &   &   & - &   &   &   &   & * &   \\
-6 - SGmulti	&   &   &   &   &   & - &   &   &   &   &   \\ \hline
-7 - DWeuc	&   &   &   &   &   &   & - &   &   &   &   \\
-8 - TUeuc	&   &   &   &   &   &   &   & - &   &   &   \\ \hline
-9 - TUmah	& * & * & * & * & * & * & * & * & - & * &   \\
-10 - ATUeuc	&   &   &   &   &   &   &   &   &   & - &   \\ \hline
-11 - ATUmah	& * & * & * & * & * & * & * & * &   & * & - \\\end{tabular}
+\begin{tabular}{lcc|cc|cc|cc|cc|cc|c}
+ 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13\\
+1 - Rnd  	& - &   &   &   &   &   &   &   &   &   &   &   &   \\
+2 - Clu  	&   & - &   &   &   &   &   &   &   &   &   &   &   \\ \hline
+3 - Mar  	&   &   & - &   &   & + &   &   &   &   &   &   &   \\
+4 - EERent	& * & * &   & - &   & * & * & + & + &   &   & * &   \\ \hline
+5 - EERacu	&   &   &   &   & - & * & * &   &   &   &   & * &   \\
+6 - SVMkff	&   &   &   &   &   & - &   &   &   &   &   &   &   \\ \hline
+7 - SVMbal	&   &   &   &   &   &   & - &   &   &   &   &   &   \\
+8 - SGmulti	&   &   &   &   &   &   &   & - &   &   &   &   &   \\ \hline
+9 - DWeuc	&   &   &   &   &   &   &   &   & - &   &   &   &   \\
+10 - TUeuc	&   &   &   &   &   &   &   &   &   & - &   &   &   \\ \hline
+11 - TUmah	& * & * & * & * & * & * & * & * & * & * & - & * &   \\
+12 - ATUeuc	&   &   &   &   &   &   &   &   &   &   &   & - &   \\ \hline
+13 - ATUmah	& * & * & * & * & * & * & * & * & * & * &   & * & - \\
+\end{tabular}
 \label{stratsALCKappaFriedSVM}
 \end{center}
 \end{table}
