regerei com tabs certas

--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -78,7 +78,7 @@ agrupar por distância entre acurácias (vetor de ~700 dimensões) -
 inclui tabela 18x18, grupos de estratégias similares e árvore com hierarquia dos grupos
 }
 
-\ano{o experimento poderia continuar rodando para as strats e learns(?) mais importantes
+\ano{o experimento poderia continuar rodando para o grupo seleto de strats e learns
 até que a passiva fosse atingida, assim seria possivel avaliar as mais economicas quando
 perdas na acurácia é inaceitável. (a forma menos codificante de fazer isso
 é fixar um learner no código,
