--- a/active-learning.tex
+++ b/active-learning.tex
@@ -417,7 +417,8 @@ Neste trabalho, seguindo a escolha do artigo original,
 optou-se pela entropia como função objetivo.
 Adicionalmente, a acurácia balanceada (Seção \ref{metricas})
 foi adotada como uma variação do método,
-visando agir diretamente na medida multiclasse de interesse.
+visando agir diretamente nas medidas multiclasse de interesse apresentadas na
+Seção \ref{metricas}.
 Apenas cem exemplos foram amostrados de $\mathcal{U}$ em cada iteração devido ao
 alto custo computacional da estratégia.
 
