--- a/metodologia.tex
+++ b/metodologia.tex
@@ -175,8 +175,8 @@ interestratégias e em relação ao acaso.
 Outro ponto de vista importante é em relação ao desempenho passivo.
 Sendo ele dado por apenas um valor para todos os exemplos, não existe
 a possibilidade de se calcular uma ALC.
-Assim, deve ser definido um momento na curva de aprendizado como sendo o orçamento
-disponível e deve ser avaliado o modelo induzido até então.
+Assim, deve ser definido um momento na curva de aprendizado como o
+limite do orçamento disponível e deve ser avaliado o modelo induzido até então.
 \green{baseline p/ AccBal é $1/|Y|$ ?}
 Nesse caso, foi adotada a acurácia balanceada \citep{journals/bmcbi/MassoV10}
 por ter um significado mais próximo
