--- a/arvore.tex
+++ b/arvore.tex
@@ -1,10 +1,3 @@
-\begin{center}
-\begin{figure}\label{tree}
-\caption{Árvore de decisão gerada pelo algoritmo C4.5 com um mínimo de $70$ exemplos
-por nó (de um total de $564$ pares base-algoritmo). O grau de pureza de cada folha é dado entre parênteses.
-Estratégias propostas estão em negrito.
-Clu, Mar, EERacu e DWeuc não tiveram vitórias suficientes para aparecer na árvore.
-\ano{reposicionar valores para maior proximidade das arestas}}
 \usetikzlibrary{trees}
 \tikzset{
     every node/.style={        font=\scriptsize    },
@@ -14,39 +7,47 @@ Clu, Mar, EERacu e DWeuc não tiveram vitórias suficientes para aparecer na árvor
         text width=1.15cm,        text centered    },
     decision tree/.style={        sibling distance=3cm,        level distance=2cm    }
 }
-\tikz [text width=2.7cm, align=flush center,grow cyclic,
+\begin{center}
+\begin{figure}\label{tree}
+\caption{Árvore de decisão gerada pelo algoritmo C4.5 com um mínimo de $70$ exemplos
+por nó (de um total de $564$ trios base-algoritmo-orçamento). O grau de pureza de cada folha é dado entre parênteses.
+Estratégias propostas estão em negrito.
+Clu, Mar, EERacu e DWeuc não tiveram vitórias suficientes para aparecer na árvore.
+\ano{reposicionar valores para maior proximidade das arestas}}
+\begin{tikzpicture} [text width=2.7cm, align=flush center,grow cyclic,
 level 1/.style={level distance=2.5cm,sibling angle=60},
-level 2/.style={text width=2cm, font=\footnotesize, level distance=3cm,sibling angle=40}]
+level 2/.style={text width=2cm, font=\footnotesize, level distance=3cm,sibling angle=45}]
 \node[line width=0.3ex, decision] {algoritmo de aprendizado}
-    child {node [decision, label=NB] {nominais}
-      child {node [outcome, label=$\leq33\%$] {\textbf{ATUeuc} ($20\%$)}}
-      child {node [outcome, label=$>33\%$] {\textbf{SGmulti} ($21\%$)}}
-    }
+    child { node [outcome, label=SVM] {\textbf{ATUmah} ($38\%$)}}
     child {node [decision, label=5NN] {classes}
       child {node [decision, label=$\leq3$] {$\frac{|\mathcal{U}|}{\# atributos}$}
         child {node [outcome, label=$\leq47$] {EERent ($22\%$)}}
         child {node [outcome, label=$>47$] {\textbf{ATUmah} ($17\%$)}}
       }
-      child {node [outcome, label=$>3$] {\textbf{ATUeuc} ($23\%$)}}
-    }
-    child {node [decision, label=VFDT] {orçamento}
-      child {node [outcome, label=baixo] {\textbf{ATUeuc} ($27\%$)}}
-      child {node [decision, label=alto] {entropia das classes}
-        child {node [outcome, label=$\leq0.95$] {Rnd ($12\%$)}}
-        child {node [outcome, label=$>0.95$] {TUeuc ($15\%$)}}
-      }
+      child {node [outcome, label=$>3$] {\textbf{ATUeuc} ($22\%$)}}
     }
     child {node [decision, label=C4.5] {orçamento}
-      child {node [outcome, label=baixo] {\textbf{ATUeuc} ($24\%$)}}
+      child {node [outcome, label=baixo] {\textbf{ATUeuc} ($25\%$)}}
       child {node [decision, label=alto] {$|\mathcal{U}|$}
-        child {node [outcome, label=$\leq614$] {\textbf{ATUeuc} ($13\%$)}}
-        child {node [outcome, label=$>614$] {\textbf{ATUmah} ($22\%$)}}
+        child {node [outcome, label=$\leq432$] {\textbf{ATUeuc} ($13\%$)}}
+        child {node [outcome, label=$>432$] {\textbf{ATUmah} ($19\%$)}}
       }
     }
-    child { node [outcome, label=SVM] {\textbf{ATUmah} ($38\%$)}}
+    child {node [decision, label=VFDT] {orçamento}
+      child {node [outcome, label=baixo] {\textbf{ATUeuc} ($28\%$)}}
+      child {node [decision, label=alto] {entropia das classes}
+        child {node [outcome, label=$\leq0.95$] {\textbf{SGmulti} ($15\%$)}}
+        child {node [outcome, label=$>0.95$] {TUeuc ($16\%$)}}
+      }
+    }
+    child {node [decision, label=NB] {nominais}
+      child {node [outcome, label=$\leq33\%$] {\textbf{ATUeuc} ($19\%$)}}
+      child {node [outcome, label=$>33\%$] {\textbf{SGmulti} ($21\%$)}}
+    }
     child {node [decision, label=CIELM] {entropia da classe}
-      child {node [outcome, label=$\leq0.81$] {TUeuc ($24\%$)}}
+      child {node [outcome, label=$\leq0.81$] {TUeuc ($23\%$)}}
       child {node [outcome, label=$>0.81$] {TUmah ($26\%$)}}
     };
+\end{tikzpicture}
 \end{figure}
 \end{center}
