--- a/exp-meta.tex
+++ b/exp-meta.tex
@@ -1,4 +1,59 @@
 \chapter{Aprendizado Meta-ativo}\label{aml}
+\ano{ainda é preciso ver se ranking supera ranking medio (default)}
+
+\ano{possibilidades: um experimento para cada learner separadamente;
+sortear budget no exp acima;
+sortear learners num experimento só;}
+
+
+\section{Análise de nichos}\label{nichos}
+Nesta seção, as estratégias são comparadas
+com o objetivo de identificar nichos em que umas possam se sobressair em relação às outras.
+\ano{explicar pela arvore quais os nichos de cada estratégia}
+
+orçamento baixo : $|Y|<\cent\leq min(\frac{|\mathcal{U}|}{2},100)$
+
+orçamento alto: $min(\frac{|\mathcal{U}|}{2},100)<\cent\leq min(|\mathcal{U}|,200)$
+
+Na árvore exibida na Figura \ref{tree},
+é possível observar o papel central do algoritmo de aprendizado sobre
+a estratégia de aprendizado ativo.
+Apesar de ilustrativa, a árvore pode não ser segura do ponto de vista de tomada de
+decisão devido ao baixo grau de pureza das folhas.
+
+\input arvore
+
+\input arvorebest
+
+Entretanto, algumas ramificações aceitam explicações plausíveis:
+\begin{itemize}
+ \item É fato que o algoritmo NB produz estimativas de distribuição de probabilidade
+excessivamente confiantes que podem ser amenizadas por
+\textit{bagging} \citep{conf/icml/RoyM01}.
+Estratégias que dependem dessas estimativas podem ser prejudicadas.
+Por outro lado,
+por ter um modelo para cada classe, SGmulti pode estar funcionando como \textit{bagging}
+e com isso tendo um maior desempenho para esse classificador.
+A maior afinidade de SGmulti com atributos nominais também é um indício de uma
+maior proximidade com NB.
+\ano{para avaliar a suavidade de cada learner,
+posso calcular a entropia média da saída de cada classif para cada
+base em todos os exemplos
+e fazer uma tabela com a ultima linha sendo a media de todas as bases}
+\esb{When Does Active Learning Work?
+confirma que atributos não-discretizados favorecem AL,
+isso justifica z-score para qq classificador ? (ao menos RF, SVM, log reg. e QDA usados no artigo).
+usa apenas QBC, entropia e random.
+}
+
+% \item Rnd tem melhor desempenho em bases mais desbalanceadas
+% (entropia igual ou abaixo de $0,95$).
+\item Nenhuma folha corresponde à amostragem aleatória.
+Isso sugere a viabilidade do aprendizado ativo em geral.
+\end{itemize}
+
+
+
 \tar{LOO é usado; então para ter confiança est. pode-se adotar o teste de McNemar}
 
 \tar{rodei meta multirrotulo pra vários metaclassif:
