--- a/stratDistsRedux.tex
+++ b/stratDistsRedux.tex
@@ -1,16 +1,16 @@
 \begin{table}[h]
 \caption{Similaridade entre estratégias de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,5$ estão em negrito.}
 \begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|c}
- 				& \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}EERent\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}SGmulti\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUeuc\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}ATUeuc\end{sideways} & \begin{sideways}ATUmah\end{sideways} \\Rnd	& - & \textcolor{blue}{\textbf{  0.66}} &   0.37 &   0.45 &   0.48 & \textbf{  0.57} &   0.25 &   0.37 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.53} &   0.21 \\
-Clu	& \textcolor{blue}{\textbf{  0.66}} & - &   0.37 &   0.47 & \textbf{  0.50} & \textbf{  0.55} &   0.24 &   0.38 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.55} &   0.21 \\ \hline
-Mar	&   0.37 &   0.37 & - &   0.39 &   0.41 &   0.38 &   0.26 & \textcolor{blue}{\textbf{  0.54}} &   0.21 &   0.36 & \textcolor{red}{\textbf{  0.20}} \\
-EERent	&   0.45 & \textcolor{blue}{\textbf{  0.47}} &   0.39 & - &   0.45 &   0.43 &   0.24 &   0.39 & \textcolor{red}{\textbf{  0.20}} &   0.41 &   0.21 \\ \hline
-EERacu	&   0.48 & \textcolor{blue}{\textbf{  0.50}} &   0.41 &   0.45 & - &   0.45 &   0.24 &   0.40 & \textcolor{red}{\textbf{  0.20}} &   0.44 &   0.21 \\
-SGmulti	& \textcolor{blue}{\textbf{  0.57}} & \textbf{  0.55} &   0.38 &   0.43 &   0.45 & - &   0.25 &   0.38 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.50} &   0.21 \\ \hline
-DWeuc	&   0.25 &   0.24 & \textcolor{blue}{\textbf{  0.26}} &   0.24 &   0.24 &   0.25 & - &   0.25 & \textcolor{red}{\textbf{  0.17}} &   0.23 & \textcolor{red}{\textbf{  0.17}} \\
-TUeuc	&   0.37 &   0.38 & \textcolor{blue}{\textbf{  0.54}} &   0.39 &   0.40 &   0.38 &   0.25 & - &   0.21 &   0.38 & \textcolor{red}{\textbf{  0.20}} \\ \hline
-TUmah	&   0.20 &   0.20 &   0.21 &   0.20 &   0.20 &   0.20 & \textcolor{red}{\textbf{  0.17}} &   0.21 & - &   0.20 & \textcolor{blue}{\textbf{  0.37}} \\
-ATUeuc	& \textbf{  0.53} & \textcolor{blue}{\textbf{  0.55}} &   0.36 &   0.41 &   0.44 & \textbf{  0.50} &   0.23 &   0.38 & \textcolor{red}{\textbf{  0.20}} & - &   0.21 \\ \hline
-ATUmah	&   0.21 &   0.21 &   0.20 &   0.21 &   0.21 &   0.21 & \textcolor{red}{\textbf{  0.17}} &   0.20 & \textcolor{blue}{\textbf{  0.37}} &   0.21 & - \\\end{tabular}}\label{stratDistsRedux}
+ 				& \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}EERent\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}SGmulti\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUeuc\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}ATUeuc\end{sideways} & \begin{sideways}ATUmah\end{sideways} \\Rnd	& - & \textcolor{blue}{\textbf{  0.67}} &   0.39 &   0.47 & \textbf{  0.50} & \textbf{  0.58} &   0.25 &   0.39 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.55} &   0.21 \\
+Clu	& \textcolor{blue}{\textbf{  0.67}} & - &   0.38 &   0.48 & \textbf{  0.51} & \textbf{  0.56} &   0.25 &   0.40 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.57} &   0.21 \\ \hline
+Mar	&   0.39 &   0.38 & - &   0.41 &   0.42 &   0.40 &   0.27 & \textcolor{blue}{\textbf{  0.56}} &   0.21 &   0.37 & \textcolor{red}{\textbf{  0.20}} \\
+EERent	&   0.47 & \textcolor{blue}{\textbf{  0.48}} &   0.41 & - &   0.46 &   0.44 &   0.25 &   0.41 & \textcolor{red}{\textbf{  0.21}} &   0.42 & \textcolor{red}{\textbf{  0.21}} \\ \hline
+EERacu	& \textbf{  0.50} & \textcolor{blue}{\textbf{  0.51}} &   0.42 &   0.46 & - &   0.47 &   0.25 &   0.41 & \textcolor{red}{\textbf{  0.21}} &   0.45 & \textcolor{red}{\textbf{  0.21}} \\
+SGmulti	& \textcolor{blue}{\textbf{  0.58}} & \textbf{  0.56} &   0.40 &   0.44 &   0.47 & - &   0.25 &   0.41 & \textcolor{red}{\textbf{  0.20}} & \textbf{  0.51} &   0.21 \\ \hline
+DWeuc	&   0.25 &   0.25 & \textcolor{blue}{\textbf{  0.27}} &   0.25 &   0.25 &   0.25 & - &   0.26 &   0.18 &   0.24 & \textcolor{red}{\textbf{  0.17}} \\
+TUeuc	&   0.39 &   0.40 & \textcolor{blue}{\textbf{  0.56}} &   0.41 &   0.41 &   0.41 &   0.26 & - &   0.21 &   0.40 & \textcolor{red}{\textbf{  0.20}} \\ \hline
+TUmah	&   0.20 &   0.20 &   0.21 &   0.21 &   0.21 &   0.20 & \textcolor{red}{\textbf{  0.18}} &   0.21 & - &   0.20 & \textcolor{blue}{\textbf{  0.38}} \\
+ATUeuc	& \textbf{  0.55} & \textcolor{blue}{\textbf{  0.57}} &   0.37 &   0.42 &   0.45 & \textbf{  0.51} &   0.24 &   0.40 & \textcolor{red}{\textbf{  0.20}} & - &   0.21 \\ \hline
+ATUmah	&   0.21 &   0.21 &   0.20 &   0.21 &   0.21 &   0.21 & \textcolor{red}{\textbf{  0.17}} &   0.20 & \textcolor{blue}{\textbf{  0.38}} &   0.21 & - \\\end{tabular}}\label{stratDistsRedux}
 \end{center}
 \end{table}
