--- a/stratsALCKappaFriedSVM.tex
+++ b/stratsALCKappaFriedSVM.tex
@@ -1,7 +1,5 @@
 \begin{table}[h]
-\caption{Um contra um: cada asterisco/cruz/ponto indica
-quando o algoritmo na linha tem melhor ALCKappa para SVM
-que o algoritmo na coluna com intervalo de confiança de 0.99/0.95/0.90.}
+\caption{Um contra um: cada asterisco/cruz/ponto indica quando o algoritmo na linha tem melhor ALCKappa para SVM que o algoritmo na coluna com intervalo de confiança de 0.99/0.95/0.90.}
 \begin{center}
 \begin{tabular}{lcc|cc|cc|cc|cc|cc|c}
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13\\
@@ -17,8 +15,7 @@ que o algoritmo na coluna com intervalo de confiança de 0.99/0.95/0.90.}
 10 - TUeuc	&   &   &   &   &   &   &   &   &   & - &   &   &   \\ \hline
 11 - TUmah	& * & * & * & * & * & * & * & * & * & * & - & * &   \\
 12 - ATUeuc	&   &   &   &   &   &   &   &   &   &   &   & - &   \\ \hline
-13 - ATUmah	& * & * & * & * & * & * & * & * & * & * &   & * & - \\
-\end{tabular}
+13 - ATUmah	& * & * & * & * & * & * & * & * & * & * &   & * & - \\\end{tabular}
 \label{stratsALCKappaFriedSVM}
 \end{center}
 \end{table}
