--- a/arvore.tex
+++ b/arvore.tex
@@ -13,7 +13,8 @@
 por nó (de um total de $564$ trios base-algoritmo-orçamento). O grau de pureza de cada folha é dado entre parênteses.
 Estratégias propostas estão em negrito.
 Clu, Mar, EERacu e DWeuc não tiveram vitórias suficientes para aparecer na árvore.
-\ano{reposicionar valores para maior proximidade das arestas}}
+\ano{reposicionar valores para maior proximidade das arestas}
+\esb{refazer incluindo ALUmanh e ALUmah. Caso mude muito no weka, atualizar aqui.}}
 \begin{tikzpicture} [text width=2.7cm, align=flush center,grow cyclic,
 level 1/.style={level distance=2.5cm,sibling angle=60},
 level 2/.style={text width=2cm, font=\footnotesize, level distance=3cm,sibling angle=45}]
