--- a/arvorebest.tex
+++ b/arvorebest.tex
@@ -5,7 +5,8 @@ por nó (de um total de $188$ pares base-orçamento).
 O grau de pureza de cada folha é dado entre parênteses.
 Estratégias propostas estão em negrito.
 Rnd, Mar e EERacu não tiveram vitórias suficientes para aparecer na árvore.
-\ano{reposicionar valores para maior proximidade das arestas}}
+\ano{reposicionar valores para maior proximidade das arestas}
+\esb{idem da outra árvore}}
 % \usetikzlibrary{trees}
 % \tikzset{
 %     every node/.style={        font=\scriptsize    },
