--- a/metodologia.tex
+++ b/metodologia.tex
@@ -32,8 +32,9 @@ fluxograma de 4 fases: queries, hits, measures, sumarização (médias/friedmans = 
 % }
 
 \section{Descrição das bases}
-As bases de dados têm suas características expostas nas tabelas \ref{tab:datasetsa},
-\ref{tab:datasetsb} e \ref{tab:datasetsc}.
+As bases de dados têm suas características expostas no Apêndice \ref{detalhes}
+(tabelas \ref{tab:datasetsa},
+\ref{tab:datasetsb} e \ref{tab:datasetsc}).
 Para maior clareza do tipo de diversidade das bases, alguns grupos especiais foram
 criados da seguinte forma:
 \begin{itemize}
@@ -45,7 +46,7 @@ majoritária do que na minoritária (Tabela \ref{tab:imb})
  \item bases com menos de quatrocentos exemplos (Tabela \ref{tab:nm})
 \end{itemize}
 
-\input dataset-tables
+\input dataset-tables-reduxes
 
 É possível notar a presença de atributos nominais, por exemplo, na Tabela \ref{tab:datasetsa}.
 Os algoritmos de aprendizado providos pela ferramenta
