--- a/apendice2.tex
+++ b/apendice2.tex
@@ -2,6 +2,10 @@
 Neste apêndice são apresentados detalhes adicionais dos experimentos reportados
 nos capítulos \ref{experimentos} e \ref{aml}.
 
+\section{Descrição das bases de dados}
+
+\input dataset-tables
+
 \section{Acurácia dos classificadores}
 Os valores de acurácia empregados na comparação de algoritmos de aprendizado
 exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0},
@@ -10,70 +14,67 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 \input classifsTab
 
 \section{Acurácia das estratégias}
-
-\ano{problema: os valores maximos e minimos estao por tabela e nao por trio de tabelas!!}
-
 \esb{Rnd não vence isoladamente em nenhuma das bases com os classificadores selecionados.}
 % só pra base 45 com ielm
-\subsection{SVM}
-\afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaSVM
-\end{landscape}\clearpage}
-
-\afterpage{\clearpage\begin{landscape}
-\input stratsBalAccSVM
-\end{landscape}\clearpage}
-
-\subsection{NB}
-\afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaNB
-\end{landscape}\clearpage}
-
-\afterpage{\clearpage\begin{landscape}
-\input stratsBalAccNB
-\end{landscape}\clearpage}
-
-\subsection{C4.5}
-\afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaC4.5
-\end{landscape}\clearpage}
-
-\afterpage{\clearpage\begin{landscape}
-\input stratsBalAccC4.5
-\end{landscape}\clearpage}
-
-\subsection{5NN}
-\afterpage{\clearpage\begin{landscape}
-\input stratsALCKappa5NN
-\end{landscape}\clearpage}
-
-\afterpage{\clearpage\begin{landscape}
-\input stratsBalAcc5NN
-\end{landscape}\clearpage}
-
-\subsection{IELM}
-\afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaIELM
-\end{landscape}\clearpage}
-
-\afterpage{\clearpage\begin{landscape}
-\input stratsBalAccIELM
-\end{landscape}\clearpage}
-
-\subsection{CIELM}
-\afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaCIELM
-\end{landscape}\clearpage}
-
-\afterpage{\clearpage\begin{landscape}
-\input stratsBalAccCIELM
-\end{landscape}\clearpage}
-
-\subsection{VFDT}
-\afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaVFDT
-\end{landscape}\clearpage}
-
-\afterpage{\clearpage\begin{landscape}
-\input stratsBalAccVFDT
-\end{landscape}\clearpage}
+% \subsection{SVM}
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsALCKappaSVM
+% \end{landscape}\clearpage}
+% 
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsBalAccSVM
+% \end{landscape}\clearpage}
+% 
+% \subsection{NB}
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsALCKappaNB
+% \end{landscape}\clearpage}
+% 
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsBalAccNB
+% \end{landscape}\clearpage}
+% 
+% \subsection{C4.5}
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsALCKappaC4.5
+% \end{landscape}\clearpage}
+% 
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsBalAccC4.5
+% \end{landscape}\clearpage}
+% 
+% \subsection{5NN}
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsALCKappa5NN
+% \end{landscape}\clearpage}
+% 
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsBalAcc5NN
+% \end{landscape}\clearpage}
+% 
+% % \subsection{IELM}
+% % \afterpage{\clearpage\begin{landscape}
+% % \input stratsALCKappaIELM
+% % \end{landscape}\clearpage}
+% % 
+% % \afterpage{\clearpage\begin{landscape}
+% % \input stratsBalAccIELM
+% % \end{landscape}\clearpage}
+% 
+% \subsection{CIELM}
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsALCKappaCIELM
+% \end{landscape}\clearpage}
+% 
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsBalAccCIELM
+% \end{landscape}\clearpage}
+% 
+% \subsection{VFDT}
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsALCKappaVFDT
+% \end{landscape}\clearpage}
+% 
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsBalAccVFDT
+% \end{landscape}\clearpage}
